# daemondeal.github.io

./: .gitignore  LICENSE  README.md  imgui.ini  index.html  pyproject.toml  themeSwitcher.js  waves_style.css  waves_viewer.js
BannedTester/css/: style.css
BannedTester/js/: app.js  card_deck.js
BannedTester/src/: app.ts
DBZForum/: waves.json  waves_viewer.html  waves_viewer.js
MatrixDemo/: index.html  setVectors.js  showMatrix.js  style.css
MatrixDemo/Matrix3D/: index.html  manageMatrix.js  show3dMatrix.js
MatrixDemo/QuaternionTest/: index.html  manageMatrix.js  quaternion.js  show3dMatrix.js  vector3.js
MultipleChoices/: build_formula_parser_js.bundle.a1510e61c9fc86ff98d8.js  bundle.3266cf47e392f6af7cee.js  bundle.4d7d7df55f9ff54829f2.js  bundle.8092c7b4e1077dc8d41b.js  bundle.a1510e61c9fc86ff98d8.js  index.html
backlog/: index.html
data/: home.md
data/backlog/: games.toml
data/static/css/: common.css  tabulator-pico.css
data/static/js/: backlog.js
multiple-choices-optimizer/: package-lock.json  package.json
multiple-choices-optimizer/src/: App.js  formulaParser.js  strings.js
quick/: artist.html
src/backlog/: __init__.py  add_game.py  api_wrapper.py
src/backlog_imgui/: __init__.py
src/common/: __init__.py  logging.py
src/deploy/: __init__.py
src/webgen/: __init__.py  backlog.py  generator.py
static/js/: backlog.js  themeSwitcher.js
templates/: add_game.html  add_game_dialog.html  add_game_search.html  backlog.html  backlog_home.html  base.html  content.html  homepage.html  update_game.html  update_game_dialog.html
(+6 files in other folders)
