[project]
name = "webgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "ghp-import>=2.1.0",
    "glfw>=2.10.0",
    "jinja2>=3.1.6",
    "markdown>=3.8.2",
    "numpy>=2.3.3",
    "pyopengl>=3.1.10",
    "rapidfuzz>=3.13.0",
    "requests>=2.32.4",
    "slimgui>=0.5.1",
    "toml>=0.10.2",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project.scripts]
deploy = "deploy:main"
build = "webgen:main"
backlog = "backlog:main"
backlog_imgui = "backlog_imgui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/webgen"]

[tool.pyright]
venv = ".venv"
venvPath = "."
